# meta-medical-env

./: .gitignore  Dockerfile  README.md  env.py  hackathon_results.json  inference.py  lastOutput.txt  medical_hackathon_dataset.json  openenv.yaml  requirements.txt
final_env/: .dockerignore  README.md  __init__.py  client.py  hackathon_results.json  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  test_client.py  validate-submission.sh
final_env/server/: Dockerfile  __init__.py  app.py  final_env_environment.py
